refactor: 캐싱 정보 추가
- 남은 시간만 캐싱 -> 버스 도착 정보 통째로 캐싱
- api url 수정
- 버전 정보 저장
- forEach -> for

Co-authored-by: dradnats1012 <herjebi1012@gmail.com>
Co-authored-by: Choon0414 <hyunn815@naver.com>